--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -3,7 +3,7 @@
   font-family: main-font;
   font-weight: 300;
   font-style: normal;
-  src: url(/fonts/SpaceGrotesk.woff2) format('woff2');
+  src: url(./fonts/SpaceGrotesk.woff2) format('woff2');
 }
 
 /* Global */
